--- a/app/src/main/res/layout/app_bar_chat.xml
+++ b/app/src/main/res/layout/app_bar_chat.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ethanprentice.networkchat.activities.chat_activity.ChatActivity">
+    tools:context="com.ethanprentice.networkchat.ui.activities.chat_activity.ChatActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
