--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,7 +7,7 @@
     android:background="@color/colorPrimaryDark"
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.frags.LoginFragment">
+    tools:context=".ui.activities.login_activity.LoginActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
