--- a/app/src/main/res/layout/fragment_scan_network.xml
+++ b/app/src/main/res/layout/fragment_scan_network.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/scan_network_frag_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -30,36 +30,39 @@
         android:orientation="horizontal"
 
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" >
+        app:layout_constraintLeft_toLeftOf="parent" >
 
-        <Button
-            android:id="@+id/create_group_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_margin="15dp"
-
-            android:text="Create Group" />
-
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/test_scan_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_margin="15dp"
+            android:layout_margin="12dp"
 
             android:text="Scan" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/send_test_tcp_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_margin="15dp"
+            android:layout_margin="12dp"
 
             android:text="Send Test" />
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/create_group_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:src="@drawable/ic_add"
+        android:layout_gravity="end|bottom"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        android:layout_margin="16dp" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
