--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,20 +1,106 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents">
+
+        <item name="android:actionBarStyle">@style/AppTheme.AppBarOverlay</item>
+
+        <item name="actionBarStyle">@style/AppTheme.AppBarOverlay</item>
+
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/colorPrimary</item>
     </style>
 
-    <style name="AppTheme.NoActionBar">
+    <style name="AppTheme.NoActionBar" parent="Theme.MaterialComponents.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.ActionBar" >
+        <item name="android:background">@color/colorPrimaryDark</item>
+        <item name="android:textColor">@color/textColorPrimary</item>
+        <item name="android:titleTextStyle">@style/Theme.MyAppTheme.ActionBar.TitleTextStyle</item>
+    </style>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.MyAppTheme.ActionBar.TitleTextStyle" parent="TextAppearance.MaterialComponents.Headline1">
+        <item name="android:textColor">@color/textColorPrimary</item>
+    </style>
+
+
+    <style name="CreateGroupDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowAnimationStyle">@style/CreateGroupDialogAnimation</item>
+    </style>
+
+    <style name="CreateGroupDialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/slide_up</item>
+        <item name="android:windowExitAnimation">@anim/slide_top</item>
+    </style>
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents" >
+        <item name="android:textColor">@color/textColorPrimary</item>
+        <item name="android:background">@color/colorAccent</item>
+    </style>
+
+    <style name="EditTextStyle" parent="@android:style/Widget.EditText">
+        <item name="android:background">@android:drawable/editbox_background</item>
+        <item name="android:textColor">@color/editTextColor</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:inputType">text</item>
+    </style>
+
+    <style name="TextButtonStyle" parent="TextAppearance.MaterialComponents.Button">
+        <item name="android:textColor">@color/btnTextColor</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:background">@drawable/rounded_rect_bg</item>
+        <item name="android:backgroundTint">@color/colorPrimary</item>
+    </style>
+
+    <style name="PopupStyle">
+        <item name="android:backgroundTint">@color/colorPrimaryDark</item>
+        <item name="android:background">@drawable/rounded_rect_bg</item>
+    </style>
+
+    <style name="Widget.App.Button.OutlinedButton.IconOnly" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="iconPadding">0dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:minWidth">48dp</item>
+        <item name="android:minHeight">48dp</item>
+    </style>
+
+
+    <style name="ChatMessageStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+
+        <item name="android:background">@color/grey1</item>
+    </style>
+
+
+    <style name="ChatMessageTextStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+<!--        <item name="android:minWidth">100dp</item>-->
+        <item name="android:minHeight">40dp</item>
+
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:paddingStart">20dp</item>
+        <item name="android:paddingEnd">20dp</item>
+
+        <item name="android:layout_weight">0.8</item>
+
+        <item name="android:textColor">@color/textColorPrimary</item>
+        <item name="android:layout_centerVertical">true</item>
+
+        <item name="android:background">@drawable/rounded_rect_bg</item>
+    </style>
 
 </resources>
