--- a/app/src/main/res/layout/dialog_create_group.xml
+++ b/app/src/main/res/layout/dialog_create_group.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    style="@style/CreateGroupDialog"
+    style="@style/VerticalSlideDialogAnimStyle"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.frags.CreateGroupFragment">
 
