--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<!--    <color name="colorPrimary">#E6E6E6</color>-->
-<!--    <color name="colorPrimaryDark">#1565C0</color>-->
-<!--    <color name="colorAccent">#1E88E5</color>-->
+<!--    <color userDispName="colorPrimary">#E6E6E6</color>-->
+<!--    <color userDispName="colorPrimaryDark">#1565C0</color>-->
+<!--    <color userDispName="colorAccent">#1E88E5</color>-->
 
     <color name="colorPrimary">#E6E6E6</color>
     <color name="colorPrimaryDark">#1565C0</color>
