--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,12 +33,16 @@
         <item name="android:textColor">@color/textColorPrimary</item>
     </style>
 
-
-    <style name="CreateGroupDialog" parent="@android:style/Theme.Dialog">
-        <item name="android:windowAnimationStyle">@style/CreateGroupDialogAnimation</item>
+    <style name="DefaultDialogStyle" parent="Theme.MaterialComponents.Dialog" >
+        <item name="android:background">@drawable/rounded_rect_bg</item>
+        <item name="android:backgroundTint">@color/colorPrimary</item>
     </style>
 
-    <style name="CreateGroupDialogAnimation">
+    <style name="VerticalSlideDialogAnimStyle" parent="@android:style/Theme.Dialog">
+        <item name="android:windowAnimationStyle">@style/VerticalSlideDialogAnimation</item>
+    </style>
+
+    <style name="VerticalSlideDialogAnimation">
         <item name="android:windowEnterAnimation">@anim/slide_up</item>
         <item name="android:windowExitAnimation">@anim/slide_top</item>
     </style>
@@ -91,7 +95,7 @@
     <style name="ChatMessageTextStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-<!--        <item name="android:minWidth">100dp</item>-->
+<!--        <item userDispName="android:minWidth">100dp</item>-->
         <item name="android:minHeight">40dp</item>
 
         <item name="android:paddingTop">10dp</item>
